Cambiar detalle de "No hay" por "Ninguno"

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ if (allData.length >= 5) {
         row4Content = (allData[3][0] + ' ' + (allData[3][1] || '') + ' ' + (allData[3][2] || '') + ' ' + (allData[3][3] || '')).trim();
     } else {
         // Row 4 is empty, use default text
-        row4Content = 'No hay';
+        row4Content = 'Ninguno';
     }
     
     titleData = {
