--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         let titleData = {};
 
         // URL de tu Google Sheet (formato CSV - más confiable)
-        const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQVNeNi7qQE2PotMhuWitzIh9y8M0oFLPC3ng7blHdDLScjzpx9WQPmXan6tL-d11hfQqTYW0SHamnp/pub?gid=0&single=true&output=csv&range=A1:D229';
+        const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQVNeNi7qQE2PotMhuWitzIh9y8M0oFLPC3ng7blHdDLScjzpx9WQPmXan6tL-d11hfQqTYW0SHamnp/pub?gid=0&single=true&output=csv&range=A:D';
 
         function parseDate(dateString) {
             if (!dateString || dateString.trim() === '') return null;
