--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ row4Content = data[3][0]=='' ? 'Ninguno' :  data[3][0];
         infoA2: allData[1] ? allData[1][0] : '',
         infoBCD2: allData[1] ? (allData[1][1] + ' ' + (allData[1][2] || '') + ' ' + (allData[1][3] || '')).trim() : '',
         titleABCD3: allData[2] ? (allData[2][0] + ' ' + (allData[2][1] || '') + ' ' + (allData[2][2] || '') + ' ' + (allData[2][3] || '')).trim() : '',
-        infoABCD4: row4Content,
+        infoABCD4: row4Content.toUpperCase(),
         headers: allData[4] || ['Asignaturas', 'Fecha', 'Hora', 'Aula'],
         tableData: allData.slice(5) // From row 6 onwards (index 5)
     };
@@ -549,7 +549,7 @@ row4Content = data[3][0]=='' ? 'Ninguno' :  data[3][0];
                 // Process title and info for column A
                 const titleA1Content = titleData.titleA1 ? 
                     `<div class="title-text">${titleData.titleA1}</div>
-                     <div class="title-info">${titleData.infoA2 || ''}</div>` : '';
+                     <div class="title-info">${(titleData.infoA2 || '').toUpperCase()}</div>` : '';
                 
                 // Process title and info for columns BCD
                 const titleBCDContent = titleData.titleBCD1 ? 
