Ninguno por NINGUNO

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 // Extract title information
 if (allData.length >= 5) {
     // Check if row 4 (index 3) is empty and provide default text
-row4Content = data[3][0]=='' ? 'Ninguno' :  data[3][0];
+row4Content = data[3][0]=='' ? 'NINGUNO' :  data[3][0];
    allData.splice(3, 0, "Hola"); 
     titleData = {
         titleA1: allData[0] ? allData[0][0] : '',
