Modificación en el logo de la universidad y titulo UNPSJB - Linea 356

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
             border-radius: 50%;
         }
 
+        .logo-title {
+            position: absolute;
+            top: 120px;
+            left: 15px;
+            width: 100px;
+            font-size: 0.75rem;
+            font-weight: bold;
+            color: white;
+            text-align: center;
+            line-height: 1.2;
+            z-index: 10;
+        }
+
         .header-content {
             margin-left: 100px;
         }
@@ -257,6 +270,13 @@
                 left: 10px;
             }
 
+            .logo-title {
+                top: 90px;
+                left: 10px;
+                width: 75px;
+                font-size: 0.65rem;
+            }
+
             .header-content {
                 margin-left: 95px;
             }
@@ -308,6 +328,13 @@
                 left: 8px;
             }
 
+            .logo-title {
+                top: 76px;
+                left: 8px;
+                width: 65px;
+                font-size: 0.6rem;
+            }
+
             .header-content {
                 margin-left: 80px;
             }
@@ -327,7 +354,10 @@
     <div class="container">
         <div class="header">
             <!-- Logo de la Universidad -->
-            <img class="university-logo" src="https://fcnycs.github.io/mesas-examen/logo.png" alt="Universidad Nacional de la Patagonia San Juan Bosco">
+            <img class="university-logo" src="https://fcnycs.github.io/mesas-examen/logo_s.png" alt="Universidad Nacional de la Patagonia San Juan Bosco">
+            
+            <!-- Título del logo -->
+            <div class="logo-title">UNPSJB</div>
             
             <div class="header-content">
                 <h1>FACULTAD DE CIENCIAS NATURALES Y CIENCIAS DE LA SALUD</h1>
