--- a/index.html
+++ b/index.html
@@ -368,9 +368,17 @@
         <div id="titleSection" style="display: none;"></div>
 
         <div class="info-banner">
-            ℹ️ Utiliza el buscador para filtrar por materia, fecha o cualquier información específica
+            ℹ️ DEBEN INSCRIBIRSE POR SIU GUARANI 2 DÍAS HÁBILES ANTES
+        </div>
+<div class="info-banner">
+            ℹ️ PARA EXAMEN EN CONDICION LIBRE, DEBEN INSCRIBIRSE PRESENTANDO NOTA EN FACULTAD FIRMADA POR EL DOCENTE, 5 DÍAS HÁBILES ANTES DEL EXAMEN 
         </div>
 
+        </div>
+<div class="info-banner">
+            ℹ️ PARA LOS DÍAS HÁBILES PREVIOS A LA INSCRIPCIÓN NO INCLUYEN FERIADOS, FINES DE SEMANA, EL DÍA DEL EXÁMEN, NI EL DÍA QUE SE REALIZA LA INSCRIPCIÓN
+        </div>
+        
         <div class="search-container">
             <input type="text" id="searchInput" class="search-box" placeholder="🔍 Buscar por materia, fecha...">
         </div>
