Modificación en avisos - 368/371

--- a/index.html
+++ b/index.html
@@ -366,16 +366,9 @@
         </div>
         
         <div id="titleSection" style="display: none;"></div>
-
-        <div class="info-banner">
-            ℹ️ DEBEN INSCRIBIRSE POR SIU GUARANI 2 DÍAS HÁBILES ANTES
-        </div>
-<div class="info-banner">
-            ℹ️ PARA EXAMEN EN CONDICION LIBRE, DEBEN INSCRIBIRSE PRESENTANDO NOTA EN FACULTAD FIRMADA POR EL DOCENTE, 5 DÍAS HÁBILES ANTES DEL EXAMEN 
-        </div>
-<div class="info-banner">
-            ℹ️ PARA LOS DÍAS HÁBILES PREVIOS A LA INSCRIPCIÓN NO INCLUYEN FERIADOS, FINES DE SEMANA, EL DÍA DEL EXÁMEN, NI EL DÍA QUE SE REALIZA LA INSCRIPCIÓN
-        </div>
+        <div class="info-banner">ℹ️ <strong>EXAMEN REGULAR:</strong> Por SIU Guaraní hasta 2 días hábiles previos</div>
+        <div class="info-banner">ℹ️ <strong>EXAMEN LIBRE:</strong> Por nota en Facultad con firma docente, hasta 5 días hábiles previos</div>
+        <div class="info-banner">⚠️ <strong>Los días hábiles NO incluyen:</strong> feriados, fines de semana, día del examen y día de inscripción</div>
         
         <div class="search-container">
             <input type="text" id="searchInput" class="search-box" placeholder="🔍 Buscar por materia, fecha...">
