--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
         </div>
         
         <div id="titleSection" style="display: none;"></div>
-        <div class="info-banner">ℹ️ <strong>EXAMEN REGULAR:</strong> Por SIU Guaraní hasta 2 días hábiles previos</div>
-        <div class="info-banner">ℹ️ <strong>EXAMEN LIBRE:</strong> Por nota en Facultad con firma docente, hasta 5 días hábiles previos</div>
+        <div class="info-banner">ℹ️ <strong>EXAMEN REGULAR:</strong> Por SIU Guaraní hasta <strong>2 días</strong> hábiles previos</div>
+        <div class="info-banner">ℹ️ <strong>EXAMEN LIBRE:</strong> Por nota en Facultad con firma docente, hasta <strong>5 días</strong> hábiles previos</div>
         <div class="info-banner">⚠️ <strong>Los días hábiles NO incluyen:</strong> feriados, fines de semana, día del examen y día de inscripción</div>
         
         <div class="search-container">
