Correción de formato 4 - 368/371

--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
         </div>
         
         <div id="titleSection" style="display: none;"></div>
-        <div class="info-banner">ℹ️ <strong>EXAMEN REGULAR:</strong> Por SIU Guaraní hasta <span style="font-weight: bold;">2 días</span> hábiles previos</div>
-        <div class="info-banner">ℹ️ <strong>EXAMEN LIBRE:</strong> Por nota en Facultad con firma docente, hasta <span style="font-weight: bold;">5 días</span> hábiles previos</div>
+        <div class="info-banner">ℹ️ <strong>EXAMEN REGULAR:</strong> Por SIU Guaraní hasta <span style="font-weight: bold !important;">2 días</span> hábiles previos</div>
+        <div class="info-banner">ℹ️ <strong>EXAMEN LIBRE:</strong> Por nota en Facultad con firma docente, hasta <span style="font-weight: bold !important;">5 días</span> hábiles previos</div>
         <div class="info-banner">⚠️ <strong>Los días hábiles NO incluyen:</strong> feriados, fines de semana, día del examen y día de inscripción</div>
         
         <div class="search-container">
