Actualizacion fecha en tooltip y añadida casilla de ocultar mesas pasadas

--- a/index.html
+++ b/index.html
@@ -362,6 +362,17 @@
 
             .search-container {
                 padding: 15px 20px;
+                flex-direction: column;
+                gap: 15px;
+                align-items: stretch;
+            }
+
+            .search-box {
+                min-width: unset;
+            }
+
+            .filter-container {
+                justify-content: center;
             }
 
             .table-container {
