--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         let currentTooltipTarget = null;
 
         // URL de tu Google Sheet incluyendo las columnas F y G con las fechas límite
-        const SHEET_URL = 'const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQVNeNi7qQE2PotMhuWitzIh9y8M0oFLPC3ng7blHdDLScjzpx9WQPmXan6tL-d11hfQqTYW0SHamnp/pub?gid=1847419554&single=true&output=csv&range=A:G';
+        const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQVNeNi7qQE2PotMhuWitzIh9y8M0oFLPC3ng7blHdDLScjzpx9WQPmXan6tL-d11hfQqTYW0SHamnp/pub?gid=1847419554&single=true&output=csv&range=A:G';
 
         function parseDate(dateString) {
             if (!dateString || dateString.trim() === '') return null;
