--- a/index.html
+++ b/index.html
@@ -724,7 +724,8 @@
         function isTouchDevice() {
             return (('ontouchstart' in window) ||
                     (navigator.maxTouchPoints > 0) ||
-                    (navigator.msMaxTouchPoints > 0));
+                    (navigator.msMaxTouchPoints > 0) ||
+           /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent));
         }
 
         async function loadData() {
