Corrección linea 497 "Mesas de Examen"
Corrección linea 497 "Mesas de Examen"

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             
             <div class="header-content">
                 <h1>FACULTAD DE CIENCIAS NATURALES Y CIENCIAS DE LA SALUD</h1>
-                <p>📚 Mesas de Examen</p>
+                <p>📚 MESAS DE EXAMEN FINAL</p>
             </div>
         </div>
         
